# pitchforkautowma

./: CMakeLists.txt  pico_sdk_import.cmake  srcmain.cpp  srctusbconfig.h  tusb_config.h
.github/workflows/: build.yml  m.yml  main.yml
